- Added filter based on date - Added sharing functionality

--- a/app/src/main/res/layout/activity_add_new.xml
+++ b/app/src/main/res/layout/activity_add_new.xml
@@ -39,6 +39,7 @@
                         android:id="@+id/edtCode"
                         android:layout_width="0dp"
                         android:layout_height="50dp"
+                        android:layout_margin="5dp"
                         android:layout_weight="1"
                         android:hint="@string/hint_enter_code"
                         android:inputType="text"
@@ -72,6 +73,7 @@
                     android:id="@+id/edtName"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_marginTop="10dp"
                     android:ellipsize="end"
                     android:hint="@string/hint_name"
@@ -90,6 +92,7 @@
                     android:id="@+id/edtNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_marginTop="10dp"
                     android:ellipsize="end"
                     android:hint="@string/hint_number"
@@ -109,6 +112,7 @@
                     android:id="@+id/edtAddress"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
                     android:layout_marginTop="10dp"
                     android:ellipsize="end"
                     android:gravity="top"
