--- a/app/src/main/res/layout/list_records.xml
+++ b/app/src/main/res/layout/list_records.xml
@@ -10,7 +10,7 @@
 
     <TextView
         android:id="@+id/txtName"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_person"
         android:drawablePadding="5dp"
@@ -20,7 +20,21 @@
         android:textColor="@color/primary_text"
         android:textSize="20sp"
         android:textStyle="bold"
+        app:layout_constraintEnd_toStartOf="@id/btnShare"
+        app:layout_constraintStart_toStartOf="parent"
         tools:text="Tester Name" />
+
+    <ImageButton
+        android:id="@+id/btnShare"
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="@null"
+        android:padding="5dp"
+        android:src="@drawable/ic_share"
+        app:layout_constraintBottom_toBottomOf="@+id/txtName"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/txtName" />
 
     <TextView
         android:id="@+id/txtCode"
