--- a/app/src/main/res/layout/item_message_received.xml
+++ b/app/src/main/res/layout/item_message_received.xml
@@ -13,8 +13,13 @@
         android:layout_marginStart="8dp"
         android:background="@drawable/circle"
         android:contentDescription="@null"
+        android:gravity="center"
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="J" />
 
     <TextView
         android:id="@+id/txtName"
@@ -23,6 +28,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="4dp"
         android:textSize="12sp"
+        android:visibility="gone"
         app:layout_constraintLeft_toRightOf="@+id/txtNameLetter"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="John Doe" />
@@ -36,7 +42,7 @@
         android:background="@drawable/rounded_rectangle_orange"
         android:maxWidth="240dp"
         android:padding="8dp"
-        android:textColor="#ffffff"
+        android:textColor="@color/white"
         app:layout_constraintLeft_toRightOf="@+id/txtNameLetter"
         app:layout_constraintTop_toBottomOf="@+id/txtName"
         tools:text="hi man, how are you?" />
